# langgraph-shop-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/: __init__.py  dependencies.py  logging_config.py  main.py  schemas.py
backend/routers/: __init__.py  chat.py  conversations.py  health.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ChatArea.tsx  DebugPanel.tsx  MessageBubble.tsx  ProfilePanel.tsx  Sidebar.tsx
frontend/src/hooks/: useChat.ts
frontend/src/types/: index.ts
src/: config.py
src/agent/: __init__.py  langgraph_engine.py  shopping_agent.py  shopping_prompts.py  shopping_tools.py
src/cache/: __init__.py  rag_cache.py
src/db/: conversation_store.py
src/embeddings/: product_embedder.py
src/profile/: __init__.py  profile_store.py
src/retrieval/: product_retriever.py
src/ui/: shopping_app.py
tests/: test_graph.py  test_prompts.py  test_tools.py
